nits all around

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -54,7 +54,7 @@ import SnapTricks from '../slyds/tricks/Title.astro'
 		<slyd-group>
     	<slyd id="intro">
         <h1 uppercase>oh snap!</h1>
-        <h3>Guiding <span highlight>Scroll</span></h3>
+        <h3>Nice <span highlight>Scroll</span> Control</h3>
       </slyd>
     </slyd-group>
 
@@ -97,13 +97,13 @@ import SnapTricks from '../slyds/tricks/Title.astro'
 
     <slyd-group>
       <slyd id="css-is-moving-fast">
-        <h2><b class="neon-blue">CSS</b> is</h2>
-        <h1><b class="neon-white">CRUISIN</b></h1>
+        <h2>Holy Snap</h2>
+        <h1>Scroll 🤯</h1>
       </slyd>
 
       <slyd id="thank-you">
-        <h2><b class="neon-pink">Thank You</b></h2>
-        <h1 uppercase>CSS <b class="neon-purple">Day</b></h1>
+        <h2>Thank You</h2>
+        <h1 uppercase>CSS Day</h1>
       </slyd>
     </slyd-group>
 
