--- a/src/slyds/advanced/RecapScrollport.astro
+++ b/src/slyds/advanced/RecapScrollport.astro
@@ -1,7 +1,8 @@
 <slyd id="advanced-recap-scrollport">
-  <h2><span highlight>Scrollport</span> Recap</h2>
+  <h2>The <span highlight>Scrollport</span></h2>
   <ul>
-    <li>snap type & overflow axis</li>
+    <li>overflow axis</li>
+    <li>scroll-snap-type</li>
     <li>gap, padding & scroll-padding</li>
     <li>overscroll-behavior</li>
   </ul>
