--- a/src/slyds/advanced/RecapScrollItem.astro
+++ b/src/slyds/advanced/RecapScrollItem.astro
@@ -1,5 +1,5 @@
 <slyd id="advanced-recap-scroll-item">
-  <h2><span highlight>Scroll Item</span> Recap</h2>
+  <h2>A <span highlight>Scroll Item</span></h2>
   <ul>
     <li>snap-align</li>
     <li>snap-stop</li>
