stubs the rest of the slides

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,6 +27,32 @@ import RecapScrollport from '../slyds/advanced/RecapScrollport.astro'
 import RecapScrollItem from '../slyds/advanced/RecapScrollItem.astro'
 
 import SnapTricks from '../slyds/tricks/Title.astro'
+import Perspective from '../slyds/tricks/3DPerspective.astro'
+import AutoForward from '../slyds/tricks/AutoForward.astro'
+import Chat from '../slyds/tricks/Chat.astro'
+import DateTimePicker from '../slyds/tricks/DateTimePicker.astro'
+import InfiniteScroll from '../slyds/tricks/InfiniteScroll.astro'
+import IntersectionObserver from '../slyds/tricks/IntersectionObserver.astro'
+import OverscrollEffect from '../slyds/tricks/OverscrollEffect.astro'
+import PullToRefresh from '../slyds/tricks/PullToRefresh.astro'
+import QuantityResponsive from '../slyds/tricks/QuantityResponsive.astro'
+import ScrollLinked from '../slyds/tricks/ScrollLinked.astro'
+import ScrollStartTrick from '../slyds/tricks/ScrollStart.astro'
+import SlydStarter from '../slyds/tricks/SlydStarter.astro'
+import Smart from '../slyds/tricks/SMART.astro'
+import StarterKit from '../slyds/tricks/StarterKit.astro'
+import StarterKitSticky from '../slyds/tricks/StarterKitSticky.astro'
+import Stories from '../slyds/tricks/Stories.astro'
+import SwipeUI from '../slyds/tricks/SwipeUI.astro'
+import Tabs from '../slyds/tricks/Tabs.astro'
+import TapToSnap from '../slyds/tricks/TapToSnap.astro'
+
+import SnapExplainers from '../slyds/explainers/Title.astro'
+import SnapTarget from '../slyds/explainers/SnapTarget.astro'
+import ScrollStart from '../slyds/explainers/ScrollStart.astro'
+import SnapChanging from '../slyds/explainers/SnapChanging.astro'
+import SnapChanged from '../slyds/explainers/SnapChanged.astro'
+import SnapTo from '../slyds/explainers/SnapTo.astro'
 ---
 
 <script>
@@ -93,10 +119,38 @@ import SnapTricks from '../slyds/tricks/Title.astro'
 
     <slyd-group>
       <SnapTricks />
+      <StarterKit />
+      <StarterKitSticky />
+      <Perspective />
+      <SlydStarter />
+      <TapToSnap />
+      <AutoForward />
+      <InfiniteScroll />
+      <IntersectionObserver />
+      <Smart />
+      <OverscrollEffect />
+      <PullToRefresh />
+      <QuantityResponsive />
+      <ScrollLinked />
+      <Tabs />
+      <DateTimePicker />
+      <Chat />
+      <Stories />
+      <ScrollStartTrick />
+      <SwipeUI />
     </slyd-group>
 
     <slyd-group>
-      <slyd id="css-is-moving-fast">
+    	<SnapExplainers />
+    	<SnapTarget />
+    	<ScrollStart />
+    	<SnapChanging />
+    	<SnapChanged />
+    	<SnapTo />
+    </slyd-group>
+
+    <slyd-group>
+      <slyd id="holy-snap">
         <h2>Holy Snap</h2>
         <h1>Scroll 🤯</h1>
       </slyd>
