3 starter kit tricks ready

--- a/src/slyds/advanced/RecapScrollItem.astro
+++ b/src/slyds/advanced/RecapScrollItem.astro
@@ -1,8 +1,8 @@
 <slyd id="advanced-recap-scroll-item">
   <h2>A <span highlight>Scroll Item</span></h2>
   <ul>
-    <li>snap-align</li>
-    <li>snap-stop</li>
-    <li>margin & scroll-margin</li>
+    <li>Snap-align</li>
+    <li>Snap-stop</li>
+    <li>Margin & scroll-margin</li>
   </ul>
 </slyd>
