--- a/src/slyds/advanced/RecapScrollport.astro
+++ b/src/slyds/advanced/RecapScrollport.astro
@@ -1,9 +1,9 @@
 <slyd id="advanced-recap-scrollport">
   <h2>The <span highlight>Scrollport</span></h2>
   <ul>
-    <li>overflow axis</li>
-    <li>scroll-snap-type</li>
-    <li>gap, padding & scroll-padding</li>
-    <li>overscroll-behavior</li>
+    <li>Overflow axis</li>
+    <li>Scroll-snap-type</li>
+    <li>Gap, padding & scroll-padding</li>
+    <li>Overscroll-behavior</li>
   </ul>
 </slyd>
