--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -13,3 +13,4 @@
 @import "./advanced/slides-starter-kit.css" layer(tricks);
 @import "./advanced/sticky-slide-starter-kit.css" layer(tricks);
 @import "./advanced/perspective-starter-kit.css" layer(tricks);
+@import "./advanced/nested-slyds-demo.css" layer(tricks);
