--- a/src/slyds/tricks/SlydStarter.astro
+++ b/src/slyds/tricks/SlydStarter.astro
@@ -4,7 +4,7 @@ import Prism from '/src/utils/Prism.astro'
 
 <slyd id="slyd-starter">
   <h2>Slyd Starter</h2>
-  <demo-stage>
+  <demo-stage style="gap: var(--size-5)">
     <Prism lang='html' code={`
       <style>
         @import "https://unpkg.com/slyd/dist/slyd.css";
