adds infinite scroll, renames folder

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -57,6 +57,7 @@ import SnapTo from '../slyds/explainers/SnapTo.astro'
 
 <script>
 	import "slyd"
+  import "../scripts/index.js"
 </script>
 
 <style is:global>
