--- a/src/slyds/tricks/AutoForward.astro
+++ b/src/slyds/tricks/AutoForward.astro
@@ -9,13 +9,14 @@ import Prism from '/src/utils/Prism.astro'
   </header>
   <demo-stage style="max-block-size: 50vh;">
     <Prism lang='css' code={`
-      @keyframes snap {
-        96% {
-          scroll-snap-align: center;
-        }
-        100% {
-          scroll-snap-align: center;
-        }
+      @keyframes slide {
+        75%, 99% { top: 0 }
+        95%, 98% { top: 100% }
+      }
+      
+      @keyframes snap-toggle {
+        96%, 100% { scroll-snap-align: start }
+        97%, 99%  { scroll-snap-align: none }
       }
     `}/>
     <div class="auto-forward">
@@ -27,4 +28,5 @@ import Prism from '/src/utils/Prism.astro'
       ))}
     </div>
   </demo-stage>
+  <span>Chrome Only</span>
 </slyd>
