--- a/src/styles/tricks/auto-forward.css
+++ b/src/styles/tricks/auto-forward.css
@@ -1,45 +1,27 @@
 @keyframes slide {
-  75% {
+  75%, 99% {
     top: 0
   }
-  95% {
+  95%, 98% {
     top: 100%
-  }
-  98% {
-    top: 100%
-  }
-  99% {
-    top: 0
   }
 }
 
 @keyframes slide-restart {
-  75% {
+  75%, 99% {
     top: 0
   }
-  95% {
+  95%, 98% {
     top: -200%
-  }
-  98% {
-    top: -200%
-  }
-  99% {
-    top: 0
   }
 }
 
 @keyframes snap-toggle {
-  96% {
+  96%, 100% {
     scroll-snap-align: start;
   }
-  97% {
+  97%, 99% {
     scroll-snap-align: none;
-  }
-  99% {
-    scroll-snap-align: none;
-  }
-  100% {
-    scroll-snap-align: start;
   }
 }
 
