--- a/src/slyds/tricks/3DPerspective.astro
+++ b/src/slyds/tricks/3DPerspective.astro
@@ -25,6 +25,11 @@ import Prism from '/src/utils/Prism.astro'
           <p>slide {i}</p>
         </section> 
       ))}
+      <section class="kitchen-sink">
+        <p>depth 1</p>
+        <p>depth 2</p>
+        <p>depth 3</p>
+      </section>
     </div>
   </demo-stage>
 </slyd>
