--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -73,6 +73,7 @@ import SnapTo from '../slyds/explainers/SnapTo.astro'
 
 	<link rel="icon" href="/favicon.svg" type="image/svg+xml">
 	<!-- <link rel="stylesheet" href="/src/styles/index.css"> -->
+  <link rel="stylesheet" href="https://gitcdn.xyz/repo/octoshrimpy/blokkfont/master/blokkfont.css">
 
 	<title>CSS Day 2022</title>
 </head>
@@ -130,14 +131,14 @@ import SnapTo from '../slyds/explainers/SnapTo.astro'
       <IntersectionObserver />
       <Smart />
       <OverscrollEffect />
+      <ScrollStartTrick />
       <PullToRefresh />
-      <QuantityResponsive />
+      <!-- <QuantityResponsive /> -->
       <ScrollLinked />
-      <Tabs />
+      <!-- <Tabs /> -->
       <DateTimePicker />
       <Chat />
       <Stories />
-      <ScrollStartTrick />
       <SwipeUI />
     </slyd-group>
 
