--- a/src/slyds/tricks/SwipeUI.astro
+++ b/src/slyds/tricks/SwipeUI.astro
@@ -4,14 +4,51 @@ import Prism from '/src/utils/Prism.astro'
 
 <slyd id="swipe-ui">
   <h2>Swipe UI</h2>
-  <demo-stage>
+  <demo-stage style="max-block-size: 50vh">
     <Prism lang='css' code={`
-      
+      .swipe-ui {
+        overflow-x: scroll;
+        overscroll-behavior-x: contain;
+        scroll-snap-type: x mandatory;
+      }
+
+      .swipe-message {
+        scroll-snap-align: center;
+      }
     `}/>
-    <slyd-scrollport class="horizontal snap-x">
-      {[...Array(10)].map(() => ( 
-        <div></div> 
-      ))}
-    </slyd-scrollport>
+    <div class="swipe-ui"> 
+      <div class="swipe-list">
+        <div class="swipe-item">
+          <div class="swipe-action">
+            <svg fill="none" viewBox="0 0 24 24" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1" d="M5 8h14M5 8a2 2 0 110-4h14a2 2 0 110 4M5 8v10a2 2 0 002 2h10a2 2 0 002-2V8m-9 4h4" />
+            </svg>
+            archive
+          </div> 
+          <div class="swipe-action primary">New Message!</div>
+          <div class="swipe-action danger">
+            delete
+            <svg fill="none" viewBox="0 0 24 24" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
+            </svg>
+          </div>
+        </div>
+        <div class="swipe-item">
+          <div class="swipe-action">
+            <svg fill="none" viewBox="0 0 24 24" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1" d="M5 8h14M5 8a2 2 0 110-4h14a2 2 0 110 4M5 8v10a2 2 0 002 2h10a2 2 0 002-2V8m-9 4h4" />
+            </svg>
+            archive
+          </div> 
+          <div class="swipe-action primary">New Message!</div>
+          <div class="swipe-action danger">
+            delete
+            <svg fill="none" viewBox="0 0 24 24" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
+            </svg>
+          </div>
+        </div>
+      </div>
+    </div> 
   </demo-stage>
 </slyd>
