--- a/src/slyds/explainers/Title.astro
+++ b/src/slyds/explainers/Title.astro
@@ -1,4 +1,4 @@
 <slyd id="snap-explainers">
-  <h1 uppercase>Snap Tomorrow</h1>
-  <h3>Drafts & Explainers</h3>
+  <h1 uppercase>Snap "next"</h1>
+  <h3><a href="https://github.com/argyleink/ScrollSnapExplainers/">https://github.com/argyleink/ScrollSnapExplainers/</a></h3>
 </slyd>
